@@ -1,3 +1,7 @@
+Thu May 10 15:45:56 CEST 2012 (tk)
+----------------------------------
+ * freshclam: give custom dbs higher priority during update
+
 Tue May  8 15:31:51 CEST 2012 (acab)
 ------------------------------------
  * libclamav: detect read races and abort the scan with an error
